--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
+    "basic-ftp": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
     "react-youtube": "^10.1.0",
+    "ssh2": "^1.17.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
