--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.90.16",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "axios": "^1.13.2",
     "basic-ftp": "^5.1.0",
     "class-variance-authority": "^0.7.1",
